# sheetbridge

./: .env.example  .env.sample  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  HANDOFF.md  Makefile  README.md  docker-compose.yml  openapi.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker.yml  release.yml
app/: config.py  pyproject.toml  sheets.py  store.py
docker/: entrypoint.sh
sheetbridge/: __init__.py  auth.py  blocking.py  config.py  logging.py  logging_setup.py  main.py  metrics.py  oauth.py  openapi_tool.py  ratelimit.py  scheduler.py  schema.py  sheets.py  store.py  validate.py  webhooks.py
tests/: test_append_gating.py  test_auth_security.py  test_bulk_append.py  test_dlq_nonblocking.py  test_dlq_retry.py  test_health.py  test_idempotency.py  test_key_upsert.py  test_logging.py  test_metrics.py  test_metrics_ratelimit.py  test_openapi_lock.py  test_rows_filters.py  test_scheduler_flags.py  test_schema_contracts.py
