[project]
name = "sheetbridge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "sqlmodel>=0.0.22,<0.0.23",
  "pydantic>=2.8,<3.0",
  "google-api-python-client>=2.147,<3.0",
  "google-auth>=2.34,<3.0",
  "google-auth-oauthlib>=1.2,<2.0",
  "python-dotenv>=1.0,<2.0",
  "apscheduler>=3.10,<4.0",
  "prometheus-client>=0.21,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27,<1.0",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
