[project]
name = "sheetbridge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlmodel>=0.0.22",
  "pydantic>=2.8",
  "google-api-python-client>=2.147",
  "google-auth>=2.34",
  "google-auth-oauthlib>=1.2",
  "python-dotenv>=1.0",
  "apscheduler>=3.10"
]

[tool.ruff]
line-length = 100
